{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 129,
  "lineage": "393df8c1-9839-c538-0ed1-5030c97fa644",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/zones/europe-west1-b/disks/backend-app-api-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pure-archive-330307/zones/europe-west1-b/instances/backend-app-api-instance",
            "instance_id": "5575318542172310606",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "6s15ppz5ivA=",
            "metadata_startup_script": "#!/bin/bash\n\n###########################\n### Configure Frontend ###\n###########################\ncurl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash 2\u003e ~/errors.txt\nsource ~/.bashrc 2\u003e ~/errors.txt\nnvm install v12.2.0 2\u003e ~/errors.txt\n\n\ngit clone https://github.com/Pyrd/TodoApp.git 2\u003e ~/errors.txt\ncd TodoApp/soar-frontend 2\u003e ~/errors.txt\nnpm install -g @vue/cli 2\u003e ~/errors.txt\nnpm install [...]
            "name": "backend-app-api-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
                "network_ip": "10.1.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public",
                "subnetwork_project": "pure-archive-330307"
              }
            ],
            "project": "pure-archive-330307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/zones/europe-west1-b/instances/backend-app-api-instance",
            "tags": [
              "backend-app",
              "private"
            ],
            "tags_fingerprint": "R0sh1TtJx-c=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/zones/europe-west1-b/disks/backend-app-webapp-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pure-archive-330307/zones/europe-west1-b/instances/backend-app-webapp-instance",
            "instance_id": "6856673793861241856",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "6s15ppz5ivA=",
            "metadata_startup_script": "#!/bin/bash\n\n###########################\n### Configure Frontend ###\n###########################\ncurl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash 2\u003e ~/errors.txt\nsource ~/.bashrc 2\u003e ~/errors.txt\nnvm install v12.2.0 2\u003e ~/errors.txt\n\n\ngit clone https://github.com/Pyrd/TodoApp.git 2\u003e ~/errors.txt\ncd TodoApp/soar-frontend 2\u003e ~/errors.txt\nnpm install -g @vue/cli 2\u003e ~/errors.txt\nnpm install [...]
            "name": "backend-app-webapp-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.43.245",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
                "network_ip": "10.1.0.4",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public",
                "subnetwork_project": "pure-archive-330307"
              }
            ],
            "project": "pure-archive-330307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/zones/europe-west1-b/instances/backend-app-webapp-instance",
            "tags": [
              "backend-app",
              "public"
            ],
            "tags_fingerprint": "_L3oxC4L4EI=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "data.template_file.proxy_startup_script",
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "module.lb.google_compute_forwarding_rule.default",
            "module.lb.google_compute_health_check.http",
            "module.lb.google_compute_health_check.tcp",
            "module.lb.google_compute_region_backend_service.default",
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-27T17:44:47.207-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-archive-330307/global/firewalls/backend-app-hc",
            "log_config": [],
            "name": "backend-app-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "priority": 1000,
            "project": "pure-archive-330307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/firewalls/backend-app-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "backend-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-27T17:44:47.168-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-archive-330307/global/firewalls/backend-app-ilb-fw",
            "log_config": [],
            "name": "backend-app-ilb-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "priority": 1000,
            "project": "pure-archive-330307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/firewalls/backend-app-ilb-fw",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "backend-app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "backend-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/backendServices/backend-app",
            "creation_timestamp": "2021-10-27T17:46:10.985-07:00",
            "id": "projects/pure-archive-330307/regions/europe-west1/forwardingRules/backend-app",
            "ip_address": "10.1.0.3",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "backend-app",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "network_tier": "PREMIUM",
            "ports": [
              "5000"
            ],
            "project": "pure-archive-330307",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/beta/projects/pure-archive-330307/regions/europe-west1/forwardingRules/backend-app",
            "service_label": "backend-app",
            "service_name": "backend-app.backend-app.il4.europe-west1.lb.pure-archive-330307.internal",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public"
          },
          "dependencies": [
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "module.lb.google_compute_health_check.http",
            "module.lb.google_compute_health_check.tcp",
            "module.lb.google_compute_region_backend_service.default",
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "description": "Instance group for internal-load-balancer test",
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/zones/europe-west1-b/instanceGroups/backend-app-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2021-10-27T17:45:48.161-07:00",
            "enable_cdn": false,
            "fingerprint": "0KNEQ3Aw77Q=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/healthChecks/backend-app-hc"
            ],
            "id": "projects/pure-archive-330307/regions/europe-west1/backendServices/backend-app",
            "load_balancing_scheme": "INTERNAL",
            "name": "backend-app",
            "project": "pure-archive-330307",
            "protocol": "TCP",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/backendServices/backend-app",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance.api",
            "google_compute_instance_group.api",
            "module.lb.google_compute_health_check.http",
            "module.lb.google_compute_health_check.tcp",
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/pure-archive-330307/global/networks/backend-app-network",
            "mtu": 0,
            "name": "backend-app-network",
            "project": "pure-archive-330307",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-27T17:44:47.324-07:00",
            "id": "projects/pure-archive-330307/regions/europe-west1/routers/backend-app-router",
            "name": "backend-app-router",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "project": "pure-archive-330307",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/routers/backend-app-router"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "pure-archive-330307/europe-west1/backend-app-router/backend-app-nat",
            "min_ports_per_vm": 0,
            "name": "backend-app-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "pure-archive-330307",
            "region": "europe-west1",
            "router": "backend-app-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-27T17:44:47.409-07:00",
            "gateway_address": "10.1.16.1",
            "id": "projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-private",
            "ip_cidr_range": "10.1.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "backend-app-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pure-archive-330307",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-27T17:44:47.571-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public",
            "ip_cidr_range": "10.1.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "backend-app-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pure-archive-330307",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.2.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.1.16.1",
            "id": "projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-private",
            "ip_cidr_range": "10.1.16.0/20",
            "name": "backend-app-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "private_ip_google_access": true,
            "project": "pure-archive-330307",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.1.0.1",
            "id": "projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public",
            "ip_cidr_range": "10.1.0.0/20",
            "name": "backend-app-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "private_ip_google_access": true,
            "project": "pure-archive-330307",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.2.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.2.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/regions/europe-west1/subnetworks/backend-app-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-10-27T17:45:20.322-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-archive-330307/global/firewalls/backend-app-private-allow-ingress",
            "log_config": [],
            "name": "backend-app-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "priority": 1000,
            "project": "pure-archive-330307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/firewalls/backend-app-private-allow-ingress",
            "source_ranges": [
              "10.1.0.0/20",
              "10.1.16.0/20",
              "10.2.0.0/20",
              "10.2.16.0/20",
              "10.2.32.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.private_subnetwork",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.public_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-10-27T17:44:47.145-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-archive-330307/global/firewalls/backend-app-allow-restricted-inbound",
            "log_config": [],
            "name": "backend-app-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "priority": 1000,
            "project": "pure-archive-330307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/firewalls/backend-app-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-10-27T17:44:47.172-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-archive-330307/global/firewalls/backend-app-public-allow-ingress",
            "log_config": [],
            "name": "backend-app-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/networks/backend-app-network",
            "priority": 1000,
            "project": "pure-archive-330307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-archive-330307/global/firewalls/backend-app-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}